# ETHOS_PeNALPS

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  README.md  asd.py  environment.yml  ethos  ittsc_lpg  pyproject.toml  setup.cfg
.github/workflows/: daily_tests.yml  push_and_pull_tests.yml  run_tests.yml  test.yml
documentation/: Introduction.md  _config.yml  _toc.yml  conf.py  contents.md  references.bib
documentation/ethos_penalps_articles/: class_diagrams.md  contribution_guide.md  define_a_process_step.md  main_operations_in_production_planning.md  material_flow_model.md  model_description.md  model_topology.md  roadmap.md  simulation_workflow.md  statement_of_need.md
documentation/ethos_penalps_tutorial/: 0_1_installation.md  0_overview.md  1_single_cooker_process_chain.md  2_add_more_states.md  3_add_more_cookers_for_parallel_operations.md  4_connect_two_process_steps_exclusively.md  5_connect_three_or_more_process_steps.md  add_more_chains.md  add_more_states.md  add_network_level_and_process_chains.md  connect_three_or_more_process_steps.md  connect_two_process_steps_exclusively.md  overview.md  single_cooker_process_chain.md  unit_conversions.py
documentation/examples/: b_pillar_example.md  toffee_example.md
example/B-Pillar_manufacturing/: automatic_sizer.py  cutting_and_heating_chain.py  forming_quenching_and_triming_chain.py  simulation_starter.py  simulation_starter_for_automatic_sizing.py  stream_post_processor.py
example/basic_examples.py/: batch_to_batch_1_node_example.py
example/joss_example_toffee/: automatic_sizer.py  cutting_and_packaging_chain.py  simulation_starter.py  simulation_starter_for_automatic_sizing.py  toffee_preparation_chain_1.py  toffee_preparation_chain_2.py
examples/B-Pillar_manufacturing/: simulation_starter.py
examples/b_pillar_manufacturing/: cutting_and_heating_chain.py  forming_quenching_and_trimming_chain.py  simulation_starter.py
examples/basic_examples/: batch_to_batch_1_node_example.py
examples/basic_examples.py/: batch_to_batch_1_node_example.py
examples/toffee_production/: cutting_and_packaging_chain.py  profile-export-data.prof  profilingStatsAsTextSortedCumulative.txt  profilingStatsAsTextSortedTotalTime.txt  profilingStatsAsTextSortedcalls.txt  simulation_starter.py  toffee_preparation_chain_1.py  toffee_preparation_chain_2.py
examples/tutorial/: _1_cooking_example.py  _2_cooking_example_more_states.py  _3_add_more_cooker_for_parallel_operation.py  _3_cooking_and_mixer_exclusive_example.py  _4_cooking_and_mixer_exclusive_example.py  cooking_example.py  cooking_example_multiple_process_step.py  cooking_example_parallel_process_steps.py
paper/: citavi.bib  convert_to_word.py  how_to_precompile.md  paper.jats  paper.md
paper/generic_objects/: generic_objects.fdb_latexmk  generic_objects.fls  generic_objects.tex
paper/material_flow_basic_tex/: enterprise_text_file.fdb_latexmk  enterprise_text_file.fls  enterprise_text_file.tex
paper/material_flow_simulation_tex/: enterprise_text_file.fls  enterprise_text_file.tex
paper/material_flow_simulation_tex_copy/: enterprise_text_file.fls  enterprise_text_file.tex  pdflatex32976.fls
paper/process_state_network/: process_state_network_separate_input_and_output.fdb_latexmk  process_state_network_separate_input_and_output.tex  process_states_gantt_chart.fdb_latexmk  process_states_gantt_chart.tex
paper/test_create_command/: asd.fdb_latexmk  asd.fls  asd.tex  asdd.fdb_latexmk  asdd.fls  asdd.tex
paper/test_tikz_path/: asd.fdb_latexmk  asd.fls  asd.tex
src/ethos_penalps/: __init__.py  capacity_calculator.py  data_classes.py  debugging_information.py  enterprise.py  load_profile_calculator.py  mass_balance.py  network_level.py  node_operations.py  order_generator.py  process_chain.py  process_node_communicator.py  process_state.py  process_state_handler.py  process_state_network_navigator.py  process_state_switch.py  process_state_switch_selector.py  process_step_data.py  production_plan.py  storage.py  stream.py  stream_handler.py  stream_node_distributor.py  time_data.py
test/: test_read_files.py
test/cases/case_1/: stream_plan.db  (+2 more)
test/order_distributor/: continuous_test_data.csv  test_order_distributor_batch.py  test_order_distributor_continuous.py
test/post_processing/: load_profile_generator_for_tests.py  test_basic_unit_conversions.py  test_compress_power_load_profile_carpet_plot.py  test_compress_power_load_profile_meta_data.py  test_load_profile_entry_analyzer.py  test_load_profile_post_processing.py  test_unit_conversions.py
test/production_plan_tests/: cutting_and_heating_chain.py  forming_quenching_and_trimming_chain.py  test_production_plan_restoration.py  test_writing_to_production_plan.py
test/storage/: storage.py
test/test_1/: forming_quenching_and_triming_chain.py  test_b_pillar.py
test/test_b_pillar/: cutting_and_heating_chain.py  forming_quenching_and_trimming_chain.py  test_b_pillar.py
test/test_carpet_plot/: asd.py  test_carpet_plot.py
(+102 files in other folders)
