[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ethos_penalps"
version = "1.0.0"
description = "A package to create energy load curves for industry locations in Germany"
readme = "README.md"
authors = [
    { name = "Julian Belina", email = "j.belina@fz-juelich.de" },
    { name = "Noah Pflugradt", email = "n.pflugradt@fz-juelich.de" },
    { name = "Detlef Stolten", email = "d.stolten@fz-juelich.de" },
]
license = { file = "LICENSE" }

keywords = [
    "Load Profile",
    "Simulator",
    "Energy Simulation",
    "Industrial Process",
]
dependencies = []
requires-python = ">=3.10"
#Configureation options
# https://docs.pytest.org/en/7.1.x/reference/reference.html#configuration-options

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test"]
console_output_style = "count"
filterwarnings = [
    # "ignore::DeprecationWarning:matplotlib",
    # "ignore::DeprecationWarning:pkg_resources",
    # "ignore::DeprecationWarning:distutils",
    # "ignore::DeprecationWarning:requests_toolbelt",
    # "ignore::DeprecationWarning:jupyter_client",
    # "ignore::DeprecationWarning:importlib",
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
    "ignore:The distutils package is deprecated and slated for removal in Python 3.12.:DeprecationWarning",
    "ignore: Deprecated API features detected!",
    "ignore: np.find_common_type is deprecated",
    "ignore:the load_module()",
    "ignore:the 'timedelta' type is not supported,",
    "ignore:the imp module is deprecated in favour",

] # How to configure Filterwarning:
# https://docs.python.org/3/library/warnings.html#warning-filter
# action:message:category:module:line
# Ommit a field by add ing ":" for each ommited field
# Actions are: "default"
# "error", "ignore", "always", "module", "once"
