[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"ethos_penalps" = ["py.typed"]
[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ethos_penalps"
version = "1.0.7"
description = "A package to create energy load curves for industry locations in Germany"
readme = "README.md"
authors = [
    { name = "Julian Belina", email = "j.belina@fz-juelich.de" },
    { name = "Noah Pflugradt", email = "n.pflugradt@fz-juelich.de" },
    { name = "Detlef Stolten", email = "d.stolten@fz-juelich.de" },
]
license = { file = "LICENSE" }

keywords = [
    "Load Profile",
    "Simulator",
    "Energy Simulation",
    "Industrial Process",
]
requires-python = ">=3.10"
#Configureation options
# https://docs.pytest.org/en/7.1.x/reference/reference.html#configuration-options

[tool.pytest.ini_options]
filterwarnings = [
    # "ignore::DeprecationWarning:matplotlib",
    # "ignore::DeprecationWarning:pkg_resources",
    # "ignore::DeprecationWarning:distutils",
    # "ignore::DeprecationWarning:requests_toolbelt",
    # "ignore::DeprecationWarning:jupyter_client",
    # "ignore::DeprecationWarning:importlib",
    "ignore:invalid value encountered in cast:RuntimeWarning:numpy",
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
    "ignore:The distutils package is deprecated and slated for removal in Python 3.12.:DeprecationWarning",
    "ignore: Deprecated API features detected!",
    "ignore: np.find_common_type is deprecated",
    "ignore:the load_module()",
    "ignore:the 'timedelta' type is not supported,",
    "ignore:the imp module is deprecated in favour",
    "ignore:Deprecated call to `pkg_resources.declare_namespace",
    "ignore: Deprecated call to `pkg_resources.declare_namespace",
    "ignore: distutils Version classes are deprecated.",
    "ignore: pkg_resources is deprecated as an API.",
    "ignore: Deprecated API features detected!"
    

] # How to configure Filterwarning:minversion = "6.0"
# https://docs.pytest.org/en/7.1.x/reference/reference.html#confval-pythonpath
testpaths = ["test"] # Sets the path where to look for tests
pythonpath =["test"] # Sets the path which should be prepended to pythonpath relative to the root folder

console_output_style = "count"
# https://docs.python.org/3/library/warnings.html#warning-filter
# action:message:category:module:line
# Ommit a field by add ing ":" for each ommited field
# Actions are: "default"
# "error", "ignore", "always", "module", "once"
markers = ["load_profile_entry_analyzer","carpet_plot_tests","matrix_resample_and_compression_tests","resample_load_profile_meta_data","production_plan_input_output","test_load_profile_post_processing"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs= true

[[tool.mypy.overrides]]
module = ["cloudpickle.*","datapane.*","matplotlib.*"]
ignore_missing_imports = true


[tool.ruff.lint]
ignore = ["F401"]